# cmake-template

./: .gitignore  README.md
cmake-variable/overwrite_cache_string/: CMakeLists.txt
cmake-variable/overwrite_option/: CMakeLists.txt
cmake-variable/overwrite_option/subdir/: CMakeLists.txt
cpp/multi-o/: CMakeLists.txt  Makefile  assistant.cc  assistant.h  employee.cc  employee.h  main.cc  president.cc  president.h  professor.cc  professor.h
exec-lib-subdir/: CMakeLists.txt
exec-lib-subdir/exec/: CMakeLists.txt
exec-lib-subdir/lib/: CMakeLists.txt
include-lib/include/: swap.h
include-lib/lib/: swap.cc
layout/exec-lib-subdir/exec/: CMakeLists.txt  main.cc
layout/exec-lib-subdir/lib/: CMakeLists.txt  foo.cc  foo.h
layout/include-lib/: CMakeLists.txt
layout/include-lib/exec/: CMakeLists.txt  main.cc
layout/include-lib/lib/: CMakeLists.txt
to-include/include-tree/: CMakeLists.txt  main
to-include/include-tree/b2/: CMakeCache.txt  Makefile  cmake_install.cmake
to-include/include-tree/include/MyAPI/util/: log.h
to-include/include-tree/src/: CMakeLists.txt  main.cc
